--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
     <title>Wbd by zxiu</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <header>
-      <div class="container">
+    <div class="wrapper">
+      <header>
         <h1>Wbd</h1>
-        <h2>Weblockit</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/zxiu/WBD/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/zxiu/WBD/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/zxiu/WBD" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
+        <p>Wir blockieren das!</p>
+        <p class="view"><a href="https://github.com/zxiu/WBD">View the Project on GitHub <small>zxiu/WBD</small></a></p>
+        <ul>
+          <li><a href="https://github.com/zxiu/WBD/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/zxiu/WBD/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/zxiu/WBD">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -54,7 +53,11 @@
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
     </div>
-
+    <footer>
+      <p>Project maintained by <a href="https://github.com/zxiu">zxiu</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
