half way for make it better

--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,9 @@
 <body>
     <div id="container">
       <div id="container2">
-        <a id="goblacklist" href="#"><nobr>Refresh blacklist</nobr></a>
+        <button id="go-to-blacklist"><nobr>Go to blacklist</nobr></button>
+				<br/>
+				<button id="go-to-options">Go to options</button>
         <h4><nobr>Blocking follow : </nobr></h4>
         <ul id="blacklist">
         </ul>
