--- a/options.html
+++ b/options.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>
-			Blacklist Checking
-		</title>
-    <link rel="stylesheet" type="text/css" href="bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="bootstrap-switch.css" />
-    <script src="jquery-2.1.4.js"></script>
-    <script src="bootstrap-switch.js"></script>
-	</head>
-  <body>
-    <input type="checkbox" id="my-checkbox" checked >
-    <script type="text/javascript" href="options.js"></script>
-  </body>
+<head>
+  <title>My Test Extension Options</title>
+  <style>
+    body: { padding: 10px; }
+  </style>
+</head>
+
+<body>
+  Favorite color:
+  <select id="color">
+   <option value="red">red</option>
+   <option value="green">green</option>
+   <option value="blue">blue</option>
+   <option value="yellow">yellow</option>
+  </select>
+
+  <label>
+    <input type="checkbox" id="like">
+    I like colors.
+  </label>
+
+  <div id="status"></div>
+  <button id="save">Save</button>
+
+  <script src="options.js"></script>
+</body>
 </html>
