--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,13 @@
     <script src="popup.js"></script>
 	</head>
 <body>
+		<div id="wrapper">
+			<div id="menu_items">
+				<div id="titletext">
+					
+				</div>
+			</div>
+		</div>
     <div id="container">
       <div id="container2">
         <button id="go-to-blacklist"><nobr>Go to blacklist</nobr></button>
