--- a/popup.html
+++ b/popup.html
@@ -12,9 +12,11 @@
 		<div id="wrapper">
 			<div id="menu_items">
 				<div id="titletext">
-					
+
 				</div>
+			
 			</div>
+		<div>
 		</div>
     <div id="container">
       <div id="container2">
