--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 		<title>
 			Blacklist Checking
 		</title>
-    <link rel="stylesheet" type="text/css" href="popup.css" />
+    <link rel="stylesheet" type="text/css" href="popup1.css" />
     <script src="jquery-2.1.4.js"></script>
     <script src="popup.js"></script>
 	</head>
@@ -14,7 +14,7 @@
 				<div id="titletext">
 
 				</div>
-			
+
 			</div>
 		<div>
 		</div>
